	to have the message automatically wrap. Use this to improve appearance
	of caught exceptions.

	* includes/x/w/custom_comboboxlayoutmanager.H: add synchronized_columns,
	that gets copied to the popup's list layout manager, making it possible
	to create multiple combo-boxes with the same width.

	* editor_impl.C (process_keypress): \n in a single line input field
	validates its contents.

2018-04-26  Sam Varshavchik  <mrsam@courier-mta.com>

	* includes/x/w/elementobj.H: added stop_message() and
	exception_message() to x::w::element.

	* includes/x/w/input_field.H (set_validator): Replaced the text_param
	parameter to validator callbacks with x::w::input_field, and the
	callback is responsible for reporting an error, in some way; perhaps
	by calling the input_field's stop_message().


2018-04-22  Sam Varshavchik  <mrsam@courier-mta.com>

	* text_param.C (operator): Treat the string as encoded in the
	current local's charset, and not UTF-8.

	* input_field.C (set): Treat the string as encoded in the current
	locale's character set, and not UTF-8.

2018-04-17  Sam Varshavchik  <mrsam@courier-mta.com>

	* panelayoutmanager/panelayoutmanager_impl.C (remove_pane): Removal
	of pane #0 didn't work correctly.

0.4

2018-04-15  Sam Varshavchik  <mrsam@courier-mta.com>

	* Do not reset standard combo-box by hitting Enter in the search
	field without typing in the search string first, if selection_required.

2018-04-08  Sam Varshavchik  <mrsam@courier-mta.com>

	* cxxwtheme: make it a singleton application.

	* Move several internal header files into <x/w/impl>, making it
	possible to create custom display elements. Document an example
	of implementing some custom display elements.

	* Added spin button control to input fields.

0.3

2018-03-25  Sam Varshavchik  <mrsam@courier-mta.com>

	* Add IN_THREAD to all connection thread callbacks.

	* Add IN_THREAD overloads to list layout manager methods.

2018-03-19  Sam Varshavchik  <mrsam@courier-mta.com>

	* Context popup menus.
